tests/e2e/service_event_output_readonly.story
http server
    when server listen as req
        req = 2
